--- a/Source/Padutronics.Formatting.Geometry.DependencyInjection/Padutronics.Formatting.Geometry.DependencyInjection.csproj
+++ b/Source/Padutronics.Formatting.Geometry.DependencyInjection/Padutronics.Formatting.Geometry.DependencyInjection.csproj
@@ -15,4 +15,8 @@
         <RepositoryUrl>https://github.com/Padutronics/Padutronics.Formatting.Geometry.DependencyInjection</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
     </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Padutronics.DependencyInjection" Version="0.1.0" />
+        <PackageReference Include="Padutronics.Formatting.Geometry" Version="0.1.0" />
+    </ItemGroup>
 </Project>
